# maicos

./: .codecov.yml  .gitignore  CHANGELOG.rst  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-documentation_issue.yml  3-feature_request.yml  config.yml
.github/workflows/: build.yml
developer/: check_changelog.py  clean_dist_check.py
docs/: requirements.txt
docs/src/: .gitignore  conf.py
docs/src/analysis-modules/: densitycylinder.rst  densityplanar.rst  densitysphere.rst  dielectriccylinder.rst  dielectricplanar.rst  dielectricspectrum.rst  dielectricsphere.rst  dipoleangle.rst  dipordercylinder.rst  diporderplanar.rst  dipordersphere.rst  diporderstructurefactor.rst  index.rst  kineticenergy.rst  pdfcylinder.rst  pdfplanar.rst  rdfdiporder.rst  temperatureplanar.rst  velocitycylinder.rst  velocityplanar.rst
docs/src/concepts-explanations/: index.rst  saxs.rst
docs/src/devdoc/: own_module.rst  release.rst
docs/src/get-started/: basics.rst  index.rst
docs/src/get-started/basics/: index.rst
docs/src/get-started/tabs/: splitted-usage-bash.sh  splitted-usage-python-basic.py
examples/: GALLERY_HEADER.rst
examples/basics/: GALLERY_HEADER.rst  chemical-potential.py  dipole-correlations.py  pair-distribution-functions.py  saxs.py  usage-bash.sh  usage-python-advanced.py  usage-python-basic.py  usage-python.py
examples/dielectrics/: GALLERY_HEADER.rst  dielectric-profile-applied.py  dielectric-profiles.py  graphene_water.tpr
src/maicos/: __init__.py
src/maicos/core/: base.py  cylinder.py  planar.py  sphere.py
src/maicos/lib/: math.py  tables.py  util.py  weights.py
src/maicos/modules/: densitycylinder.py  densityplanar.py  densitysphere.py  dielectriccylinder.py  dielectricplanar.py  dielectricspectrum.py  dielectricsphere.py  dipoleangle.py  dipordercylinder.py  diporderplanar.py  dipordersphere.py  diporderstructurefactor.py  kineticenergy.py  pdfcylinder.py  pdfplanar.py  rdfdiporder.py  saxs.py  temperatureplanar.py  velocitycylinder.py  velocityplanar.py
tests/: test_main.py
tests/core/: test_base.py  test_cylinder.py  test_planar.py  test_sphere.py
tests/data/: __init__.py
tests/lib/: test_math.py  test_weights.py
tests/modules/: test_temperatureplanar.py
